--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -4,8 +4,9 @@ li {list-style: none;}
 a {text-decoration: none;}
 
 /*높이 자동 조절은 html, body의 height을 100%로 두어야 사용 가능*/
-html, body, .main{
-  height: 100%
+html, body .main{
+  height: 100%;
+  min-height: 700px;
 }
 
 body {
@@ -43,7 +44,6 @@ div, span, nav, footer{
 
 .main{
   height: 100%;
-  order: 4;
   flex-grow: 1;
   flex-shrink: 1;
 }
@@ -74,6 +74,7 @@ div, span, nav, footer{
 }
 
 .total_box{
+  order: 5;
   max-width: 350px;
   margin-top: 20px;
 }
@@ -252,6 +253,7 @@ footer{
 }
 
 .download_bar{
+  z-index: 1;
   padding:0 8px;
   background-color: #d10869;
   overflow: hidden;
@@ -263,7 +265,7 @@ footer{
   width: 100%;
 }
 .content{
-  z-index: 1;
+  z-index: 2;
 }
 .dl_link{
   display: flex;
